kubernetes/apps/default/kubernetes-dashboard/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kube.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: kubernetes-dashboard
          port: 8443
      # middlewares:
      #   - name: traefik-middleware-chains-default
      #     namespace: networking
  tls:
    secretName: kubernetes-dashboard
